# hakase_diamond

./: .gitignore  .replit  README.md  pnpm-lock.yaml  pyproject.toml  replit.md
.local/skills/artifacts/: .fingerprint
.local/skills/code_review/: .fingerprint
.local/skills/remove-image-background/: .fingerprint
.local/state/replit/: log-query.db  log-query.db-shm  log-query.db-wal
.local/state/scribe/: scribe.db-shm  scribe.db-wal
.local/state/workflow-logs/-nW8AFc-fFahGHuFiEkUr/: metadata.json
.local/state/workflow-logs/1W7h9MwAda1lmrkAn9c6I/: frontend_artifacts_mockup-sandbox__component_preview_server.shell.exec.0  metadata.json
.local/state/workflow-logs/29WUsKpDMX2a-nGFfTp2K/: metadata.json  (+1 more)
artifacts/hakase-clinical/src/: index.css
backend/: README.md  config.yaml  main.py  server.py
backend/api/: main.py
backend/api/routers/: bridge.py  compliance.py  kols.py  protocol.py  publications.py  safety.py  simulation.py  sites.py  trial_hub.py  trials.py
backend/api/services/: analysis.py  compliance_rules.py  ctgov.py  data_hub.py  deep_learning.py  dynamic_reasoner.py  extractor.py  kols.py  openfda.py  protocol_extractor.py  pubmed.py  pytrial_integration.py  reasoning_retriever.py  trial_hub_engine.py
backend/modules/: extractor.py
backend/temp/: llm.py  reasoning_retreiver.py
frontend/: README.md  pnpm-lock.yaml  replit.md
frontend/artifacts/hakase-clinical/: index.html  package.json  vite.config.ts
frontend/attached_assets/: Hakase_Clinical_Framework_v1.0_1773323094673.docx
requirements/: architecture_design.md  specifications.md
(+523 files in other folders)
