[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.5",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "numpy>=2.4.4",
    "pydantic>=2.12.5",
    "pymupdf>=1.27.2.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "scipy>=1.17.1",
    "uvicorn[standard]>=0.44.0",
]
